--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.code.gson:gson:2.5'
     compile 'org.ocpsoft.prettytime:prettytime:3.2.7.Final'
+    compile 'com.pes.materialcolorpicker:library:1.0.2'
 }
