--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 100
-        versionName "1.0.0"
+        versionName "1.0.0-beta-2"
     }
     buildTypes {
         release {
@@ -47,7 +47,7 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.3.4@aar') {
         transitive = true
     }
-    compile 'net.ilexiconn:magister:0.1.1'
+    compile 'net.ilexiconn:magister:0.1.2'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.code.gson:gson:2.5'
